# checkers-hs

./: CHANGELOG.md  checkers-hs.cabal  stack.yaml
app/: Main.hs
